Test/git-issues/git-issue-446e.dfy.expect
git-issue-446e.dfy(23,14): Error: wrong number of method result arguments (got 3, expected 2) for a rhs type (Result<int>) with member Extract
git-issue-446e.dfy(24,9): Error: wrong number of method result arguments (got 1, expected 2) for a rhs type (Result<int>) with member Extract
git-issue-446e.dfy(29,14): Error: wrong number of method result arguments (got 3, expected 2) for a rhs type (Result<int>) with member Extract
git-issue-446e.dfy(30,9): Error: wrong number of method result arguments (got 1, expected 2) for a rhs type (Result<int>) with member Extract
4 resolution/type errors detected in git-issue-446e.dfy
